--- a/index.html
+++ b/index.html
@@ -6,30 +6,32 @@
   <meta name="viewport" content="width=device-width">
   <title>Basic Calculator </title><!--With easter eggs... shhh!-->
   <link href="style.css" rel="stylesheet" type="text/css" />
+  <link href="https://fonts.cdnfonts.com/css/ds-digital" rel="stylesheet"/>
 </head>
 
 <body>
   <div class="calculator">
     <div class="display">
       <div id="display-text">42</div>
+      <div id="display-eetext"></div>
     </div>
         <button class="button" id="clear">CLEAR</button>
         <button class="button" id="backspace">DEL</button>
-        <button class="button" id="divide">/</button>
-        <button class="button" id="seven">7</button>
-        <button class="button" id="eight">8</button>
-        <button class="button" id="nine">9</button>
-        <button class="button" id="multiply">*</button>
-        <button class="button" id="four">4</button>
-        <button class="button" id="five">5</button>
-        <button class="button" id="six">6</button>
-        <button class="button" id="subtract">-</button>
-        <button class="button" id="one">1</button>
-        <button class="button" id="two">2</button>
-        <button class="button" id="three">3</button>
-        <button class="button" id="add">+</button>
+        <button class="button-operator" id="divide">/</button>
+        <button class="button-number" id="seven">7</button>
+        <button class="button-number" id="eight">8</button>
+        <button class="button-number" id="nine">9</button>
+        <button class="button-operator" id="multiply">*</button>
+        <button class="button-number" id="four">4</button>
+        <button class="button-number" id="five">5</button>
+        <button class="button-number" id="six">6</button>
+        <button class="button-operator" id="subtract">-</button>
+        <button class="button-number" id="one">1</button>
+        <button class="button-number" id="two">2</button>
+        <button class="button-number" id="three">3</button>
+        <button class="button-operator" id="add">+</button>
         <button class="button" id="positive-negative">+/-</button>
-        <button class="button" id="zero">0</button>
+        <button class="button-number" id="zero">0</button>
         <button class="button" id="decimal">.</button>
         <button class="button" id="equals">=</button>
   <script src="script.js"></script>
