--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
   <div class="calculator">
     <div class="display">
-      <div id="display-text">42</div>
+      <div id="display-text"></div>
       <div id="display-eetext"></div>
     </div>
         <button class="button" id="clear">CLEAR</button>
@@ -30,16 +30,7 @@
         <button class="button-number" id="two">2</button>
         <button class="button-number" id="three">3</button>
         <button class="button-operator" id="add">+</button>
-        <button class="button" id="positive-negative">+/-</button>
-        <button class="button-number" id="zero">0</button>
         <button class="button" id="decimal">.</button>
+        <button class="button-number" id="zero">0</button>
         <button class="button" id="equals">=</button>
   <script src="script.js"></script>
-
-  <!--
-  This script places a badge on your repl's full-browser view back to your repl's cover
-  page. Try various colors for the theme: dark, light, red, orange, yellow, lime, green,
-  teal, blue, blurple, magenta, pink!
-  -->
-  <script src="https://replit.com/public/js/replit-badge-v2.js" theme="dark" position="bottom-right"></script>
-</body>
