--- a/index.html
+++ b/index.html
@@ -32,5 +32,8 @@
         <button class="button-operator" id="add">+</button>
         <button class="button" id="decimal">.</button>
         <button class="button-number" id="zero">0</button>
+        <button class="button" id="polarity">+/-</button>
         <button class="button" id="equals">=</button>
   <script src="script.js"></script>
+</body>
+</html>  
